@@ -182,7 +182,8 @@ New Features
 * SOLR-7231: DIH-TikaEntityprocessor, create lat-lon field from Metadata
   (Tim Allison via Noble Paul)
 
-* SOLR-6220: Rule Based Replica Assignment during collection creation (Noble Paul)
+* SOLR-6220: Rule Based Replica Assignment during collection, shard creation
+  and replica creation (Noble Paul)
 
 * SOLR-6968: New 'cardinality' option for stats.field, uses HyperLogLog to efficiently 
   estimate the cardinality of a field w/bounded RAM. (hossman)
